--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
-        "silex/silex": "~1.1"
+        "silex/silex": "~1.1",
+        "symfony/yaml": "2.5.*@dev"
+    },
+    "autoload": {
+        "psr-0": { "Gamping\\": "lib" }
     }
+   
 }
