--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "require": {
         "silex/silex": "~1.1",
-        "symfony/yaml": "2.5.*@dev"
+        "symfony/yaml": "2.5.*@dev",
+        "oliviermadre/dic-it" : "dev-master",
+        "oliviermadre/berthe" : "dev-ns"
     },
     "autoload": {
         "psr-0": { "Gamping\\": "lib" }
     }
-   
+
 }
