Add activity & commodity modules

--- a/config/part/controllers.yml
+++ b/config/part/controllers.yml
@@ -3,3 +3,4 @@ classes:
         class: Gamping\Controllers\Home
         props :
             userManager : @UserManager
+            parcelManager: @ParcelManager
