Add missing VOs and add FormService

--- a/config/part/controllers.yml
+++ b/config/part/controllers.yml
@@ -1,6 +1,7 @@
 classes:
     homeController:
         class: Gamping\Controllers\Home
+        interceptor : [ @GoogleAnalytics ]
         props :
             userManager : @UserManager
             parcelManager: @ParcelManager
