--- a/config/part/parameters.yml
+++ b/config/part/parameters.yml
@@ -7,3 +7,7 @@ parameters :
             username : root
             password : weleanit
             dbname : weleanit
+    facebook:
+        key : facebook-app-key
+    googleAnalytics:
+        key : ga-key-thibaud
