Search page design

--- a/public/style/fonts/fontello/config.json
+++ b/public/style/fonts/fontello/config.json
@@ -25,6 +25,12 @@
       "src": "mfglabs"
     },
     {
+      "uid": "68c7be0f4cab6b82d5725b1ba7cec4d6",
+      "css": "zoom-in",
+      "code": 59397,
+      "src": "elusive"
+    },
+    {
       "uid": "04960bf02134620e6c61bac8d6569502",
       "css": "left-open-1",
       "code": 59396,
