--- a/config/part/controllers.yml
+++ b/config/part/controllers.yml
@@ -5,23 +5,24 @@ classes:
         props :
             userManager : @UserManager
             parcelManager: @ParcelManager
-            
+            countryManager : @CountryManager
+
     formController:
         class: \Gamping\Controllers\Form
         interceptor : [ @GoogleAnalytics ]
-        call:  
+        call:
             setFormService: [ @ParcelFormService ]
-            
+
     searchController:
         class: \Gamping\Controllers\Search
         call:
             setGeographicalService: [ @GeographicalService ]
-            
+
     searchRegionsController:
         class: \Gamping\Controllers\Search\RegionsByCountry
         call:
             setGeographicalService: [ @GeographicalService ]
-            
+
     parcelsByRegionController:
         class: \Gamping\Controllers\Search\ParcelsByRegion
         call:
