--- a/config/part/modules/place_has_situation_geo.yml
+++ b/config/part/modules/place_has_situation_geo.yml
@@ -16,7 +16,7 @@ classes :
     PlaceHasSituationGeoStoreMemcached :
         class : \Berthe\DAL\StoreMemcached
     PlaceHasSituationGeoStoreDatabase :
-        class : \Berthe\DAL\StoreDatabase
+        class : \Gamping\DAL\StoreDatabase
         call :
             setReader : [ @PlaceHasSituationGeoReader ]
             setWriter : [ @PlaceHasSituationGeoWriter ]
