--- a/config/part/modules/currency.yml
+++ b/config/part/modules/currency.yml
@@ -16,7 +16,7 @@ classes :
     CurrencyStoreMemcached :
         class : \Berthe\DAL\StoreMemcached
     CurrencyStoreDatabase :
-        class : \Berthe\DAL\StoreDatabase
+        class : \Gamping\DAL\StoreDatabase
         call :
             setReader : [ @CurrencyReader ]
             setWriter : [ @CurrencyWriter ]
