--- a/config/part/services.yml
+++ b/config/part/services.yml
@@ -10,7 +10,8 @@ classes:
             setParcelHasActivityManager: [ @ParcelHasActivityManager ]
             setParcelHasCommodityManager: [ @ParcelHasCommodityManager ]
             setParcelManager: [ @ParcelManager ]
-            
+            setCountryManager: [ @CountryManager ]
+
     GeographicalService:
         class: \Gamping\Service\GeographicalService
         call:
