remove place, setting data from form in builder

--- a/config/part/services.yml
+++ b/config/part/services.yml
@@ -11,6 +11,7 @@ classes:
             setParcelHasCommodityManager: [ @ParcelHasCommodityManager ]
             setParcelManager: [ @ParcelManager ]
             setCountryManager: [ @CountryManager ]
+            setSituationGeoManager: [ @SituationGeoManager ]
 
     GeographicalService:
         class: \Gamping\Service\GeographicalService
