--- a/config/part/parameters.yml
+++ b/config/part/parameters.yml
@@ -2,9 +2,9 @@ parameters :
     db :
         adapter : PDO_MYSQL
         params :
-            host : localhost
+            host : 192.168.1.8
             port : 3306
-            username : root
+            username : gamping
             password : gamping
             dbname : gamping
     facebook:
