--- a/config/part/modules/parcel_has_picture.yml
+++ b/config/part/modules/parcel_has_picture.yml
@@ -7,6 +7,8 @@ classes :
         interceptor : [ @ExceptionInterceptor ]
     ParcelHasPictureValidator :
         class : \Gamping\Model\ParcelHasPicture\Validator
+        call :
+            setErrors : [ @Errors ]
     ParcelHasPictureStorage :
         class : \Gamping\Model\ParcelHasPicture\Storage
         call :
