--- a/config/part/modules/commodity.yml
+++ b/config/part/modules/commodity.yml
@@ -7,6 +7,8 @@ classes :
         interceptor : [ @ExceptionInterceptor ]
     CommodityValidator :
         class : \Gamping\Model\Commodity\Validator
+        call :
+            setErrors : [ @Errors ]
     CommodityStorage :
         class : \Gamping\Model\Commodity\Storage
         call :
