--- a/config/part/modules/country.yml
+++ b/config/part/modules/country.yml
@@ -7,6 +7,8 @@ classes :
         interceptor : [ @ExceptionInterceptor ]
     CountryValidator :
         class : \Gamping\Model\Country\Validator
+        call :
+            setErrors : [ @Errors ]
     CountryStorage :
         class : \Gamping\Model\Country\Storage
         call :
