--- a/config/part/modules/parcel.yml
+++ b/config/part/modules/parcel.yml
@@ -7,6 +7,8 @@ classes :
         interceptor : [ @ExceptionInterceptor ]
     ParcelValidator :
         class : \Gamping\Model\Parcel\Validator
+        call :
+            setErrors : [ @Errors ]
     ParcelStorage :
         class : \Gamping\Model\Parcel\Storage
         call :
