--- a/config/part/modules/place.yml
+++ b/config/part/modules/place.yml
@@ -7,6 +7,8 @@ classes :
         interceptor : [ @ExceptionInterceptor ]
     PlaceValidator :
         class : \Gamping\Model\Place\Validator
+        call :
+            setErrors : [ @Errors ]
     PlaceStorage :
         class : \Gamping\Model\Place\Storage
         call :
