--- a/config/part/modules/situation_geo.yml
+++ b/config/part/modules/situation_geo.yml
@@ -7,6 +7,8 @@ classes :
         interceptor : [ @ExceptionInterceptor ]
     SituationGeoValidator :
         class : \Gamping\Model\SituationGeo\Validator
+        call :
+            setErrors : [ @Errors ]
     SituationGeoStorage :
         class : \Gamping\Model\SituationGeo\Storage
         call :
