ajax search for country and minimum json binding

--- a/config/routes.yml
+++ b/config/routes.yml
@@ -85,7 +85,7 @@ routes:
     searchParcels:
         pattern: "/ajax/parcels-search"
         controller: parcelsSearchController
-        methods: [ post ]
+        methods: [ get, post ]
         output:
             json:
                 view: app/views/search/parcels.json.phtml
