--- a/config/part/parameters.yml.dist
+++ b/config/part/parameters.yml.dist
@@ -1,8 +1,9 @@
+#Example parameters file
 parameters :
     db :
         adapter : PDO_MYSQL
         params :
-            host : 192.168.1.8
+            host : 127.0.0.1
             port : 3306
             username : gamping
             password : gamping
@@ -10,7 +11,7 @@ parameters :
     facebook:
         key : facebook-app-key
     googleAnalytics:
-        key : ga-key-thibaud
+        key : ga-key
     currentLanguage :
         iso2 : fr
         id : 1
